--- a/packages/node/base/package.json
+++ b/packages/node/base/package.json
@@ -49,6 +49,7 @@
     "@angular/platform-browser-dynamic-12": "npm:@angular/platform-browser-dynamic@12.2.13",
     "@angular/platform-server-12": "npm:@angular/platform-server@12.2.13",
     "@angular/router-12": "npm:@angular/router@12.2.13",
+    "lodash": "4.17.19",
     "@babel/cli": "7.16.0",
     "@babel/core": "7.8.6",
     "@babel/generator": "7.8.6",
